<resources>
    <string name="app_name">Newtone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="about_author">Author: Mateusz Nejman</string>
    <string name="about_desc">The player allows you to listen to music from youtube, and locally. The author is not responsible for how the user uses the media from the websites.</string>
    <string name="about_www">Author page</string>
    <string name="add">Add</string>
    <string name="add_tags">Add tags?</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="back_pressed">Press again to exit</string>
    <string name="cancel">Cancel</string>
    <string name="change_name">Change name</string>
    <string name="choose_playlist">Select playlist</string>
    <string name="clear">Clear</string>
    <string name="download">Download</string>
    <string name="file_corrupted">File is corrupted</string>
    <string name="file_downloaded">Downloaded</string>
    <string name="folder_exists">Folder doesn\'t exists</string>
    <string name="new_playlist">New playlist</string>
    <string name="new_playlist_hint">Enter playlist name</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="no_connection">No internet connection</string>
    <string name="no_downloads">No downloads in background</string>
    <string name="permission_grant">Grant permissions</string>
    <string name="permission_info">The player requires permission to save data in order to download music and save settings</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_download">Create playlist from downloaded tracks?</string>
    <string name="playlist_exists">Playlist exists with this name</string>
    <string name="playlist_or_track">Download playlist or track?</string>
    <string name="playlist_play">Play</string>
    <string name="playlists">Playlists</string>
    <string name="progress">Progress</string>
    <string name="question">Question</string>
    <string name="question_delete">Delete file</string>
    <string name="question_delete_from_playlist">from playlist</string>
    <string name="question_delete_playlist">Delete playlist</string>
    <string name="ready">Ready</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="searching">Searching...</string>
    <string name="search_tip">Name or url</string>
    <string name="select">Select</string>
    <string name="select_folder">Select folder</string>
    <string name="settings">Settings</string>
    <string name="settings0">Clear all data</string>
    <string name="settings1">Ignore muting tracks during a call</string>
    <string name="settings2">Add folder to scanned paths</string>
    <string name="settings_changes">The changes will be visible after restarting the application</string>
    <string name="snack_delete">Deleted successfully</string>
    <string name="snack_file_exists">File dont exists</string>
    <string name="snack_playlist">Added to playlist</string>
    <string name="snack_queue">Added to queue</string>
    <string name="title">Title</string>
    <string name="title_downloads">Downloading</string>
    <string name="track">Track</string>
    <string name="track_count">Saved tracks</string>
    <string name="track_count_playlist">Tracks</string>
    <string name="track_menu_delete">Delete</string>
    <string name="track_menu_edit">Edit</string>
    <string name="track_menu_playlist">Add to playlist</string>
    <string name="track_menu_queue">Add to queue</string>
    <string name="tracks">Tracks</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="youtube_error">An error occurred due to changes to YouTube. Please wait for the update with the given changes.</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="send_bluetooth">Send</string>
    <string name="send_bluetooth_info">You can send data to another device with Newtone installed. Continue?</string>
    <string name="send_bluetooth_select">Select device</string>
</resources>