<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_player"
        android:icon="@drawable/play_icon"
        android:title="@string/play" />
    <item
        android:id="@+id/navigation_tracks"
        android:icon="@drawable/track_icon"
        android:title="@string/tracks" />
    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/artist_icon"
        android:title="@string/artists" />

    <item
        android:id="@+id/navigation_playlists"
        android:icon="@drawable/playlist_icon"
        android:title="@string/playlists" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings"/>
</menu>